# hpc-kernels

./: .gitignore  CMakeLists.txt  README.md
scripts/: plot_gemm.py  plot_gemv.py
src/cpu/: CMakeLists.txt
src/cpu/common/: util.h
src/cuda/: CMakeLists.txt
src/cuda/common/: benchmark.cuh  test_util.h  util.cuh  util.h
src/cuda/gemm/: CMakeLists.txt  benchmark.cu  gemm.cu  gemm.cuh  gemm_v0.cu  gemm_v0_kernel.cuh  test.cpp
src/cuda/gemv/: CMakeLists.txt
src/cuda/reduce/: CMakeLists.txt
src/cuda/rmsnorm/: CMakeLists.txt
src/cuda/softmax/: CMakeLists.txt
src/opencl/: CMakeLists.txt
src/opencl/add/: CMakeLists.txt  add.cpp  add.h  add_v0.cl  add_v1.cl  test.cpp
src/opencl/common/: CMakeLists.txt  device.cpp  device.h  test_utils.h  utils.h
src/opencl/conv2d/: CMakeLists.txt  conv2d.cpp  test.cpp
src/opencl/gemm/: CMakeLists.txt  gemm.cpp  test.cpp
src/opencl/reduce/: CMakeLists.txt  reduce.cpp  test.cpp
src/opencl/softmax/: CMakeLists.txt  softmax.cpp  softmax.h  softmax_v1.cl  softmax_v2.cl  test.cpp
